--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
-            <a class="text-white-link" href="#">
+            <a class="text-white-link" href="https://github.com/Lan-shi">
 						  [Link to GitHub Repository]
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
@@ -203,7 +203,7 @@
       <div class="row no-gutters">
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#">            
+          <a class="portfolio-box" href="https://github.com/Lan-shi/Houses-tracker">            
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project (1).jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -312,7 +312,7 @@
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/ahmad-maulana-069647205">
             <i class="fa fa-linkedin-square fa-4x sr-icons"></i>
           </a>
           <p><a href="#" class="text-blue">LinkedIn</a></p>
@@ -322,7 +322,7 @@
           <a href="#">
             <i class="fa fa-github-square fa-4x sr-icons"></i>
           </a>
-          <p><a href="#" class="text-blue">GitHub</a></p>
+          <p><a href="https://github.com/Lan-shi" class="text-blue">GitHub</a></p>
         </div>
       </div>
     </div>
