--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>[Front Web Title Bootstrap]</title>
+  <title>Tugas WGTIK 2023</title>
 
 
   <script src="https://use.fontawesome.com/4dfd1d7bab.js"></script>
@@ -41,7 +41,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Tugas WGTIK_2021</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Tugas WGTIK_2023</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
