--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Tugas WGTIK 2023</title>
+  <title>WGTIK 2023</title>
 
 
   <script src="https://use.fontawesome.com/4dfd1d7bab.js"></script>
